<resources>
    <string name="app_name">Civic-Track Application</string>
    <string name="default_web_client_id">143405735571-kpliob62mp75kkgmk5b0h2hpu02c93ed.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1417641062589805</string>
    <string name="banned">BANNED</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="reinstate">Reinstate</string>
    <string name="suspend">suspend</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_subtitle">Enter your email address and we\'ll send you a link to reset your password.</string>
    <string name="email_hint">Email Address</string>
    <string name="email_helper_text">We\'ll send reset instructions to this email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_login">Back to Login</string>
    <string name="reset_link_sent_success">Password reset link has been sent to your email address. Please check your inbox.</string>
    <string name="need_help">Need help?</string>
    <string name="contact_support">Contact Support</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="error_email_not_found">No account found with this email address</string>
    <string name="error_network">Network error. Please try again.</string>
    <string-array name="issue_categories">
        <item>Select Category</item>
        <item>Pothole</item>
        <item>Garbage</item>
        <item>Street Light</item>
        <item>Water Leakage</item>
        <item>Noise Pollution</item>
        <item>Illegal Construction</item>
        <item>Other</item>
    </string-array>
    <string name="profile_image">Profile image</string>
    <string name="edit">Edit</string>
    <string name="preferences">Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="my_reported_issues">My Reported Issues</string>
    <string name="no_reported_issues_yet">You haven\'t reported any issues yet</string>
    <string name="logout">Logout</string>
    <string name="statistics_title">Statistics</string>
    <string name="pie_chart_desc">Pie chart of issue statistics</string>
    <string name="bar_chart_desc">Bar chart of issue data over time</string>
    <string name="admin_dashboard_title">Admin Dashboard</string>
    <string name="admin_dashboard_subtitle">Manage users and issues</string>
    <string name="users">Users</string>
    <string name="issues">Issues</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="logout_icon_desc">Logout icon</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progress_subtext">Progress Subtext</string>
    <string name="progress">Progress</string>
    <string name="quick_services">Quick Services</string>
    <string name="active_issues">Active Issues</string>
    <string name="submit">Submit</string>
    <string name="click_to_get_location"><![CDATA[Click to get location---->]]></string>
    <string name="capture_image">Capture Image</string>
    <string name="garbage">Garbage</string>
    <string name="pothole">Pothole</string>
    <string name="issue_description">Issue Description</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="resolved">Resolved</string>
    <string name="in_progress">In Progress</string>
    <string name="pending">Pending</string>
    <string name="all">All</string>
    <string name="high_priority">HIGH PRIORITY</string>
    <string name="near_main_street">Near Main Street</string>
    <string name="garbage_on_road">Garbage on road</string>
    <string name="no_issues_are_added">No issues are added</string>
    <string name="no_status">No Status</string>
    <string name="try_again">Try Again</string>
    <string name="location_loading">Location Loading...</string>
    <string name="_24">24</string>
    <string name="_8">8</string>
    <string name="appicon">AppIcon</string>
    <string name="report">Report</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="issue_image">Issue Image</string>
    <string name="topic_of_issue">Topic of Issue</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="total_issues">Total Issues:</string>

</resources>