<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:radius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgIssue"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:src="@drawable/ic_report"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="12dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/garbage_on_road"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_main_street"
                android:textColor="#666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:background="@drawable/bg_status_pending"
                android:padding="4dp"
                android:layout_marginTop="4dp" />
            <TextView
                android:id="@+id/tvPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E60C0C"
                android:text="@string/high_priority"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:progress="70" />

        </LinearLayout>
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
